<?xml version="1.0"?>

<resources>

    <string name="app_name">Healthy Lifestyle</string>

    <string name="mapbox_access_token">pk.eyJ1IjoibG9uZ2hpZXUxIiwiYSI6ImNrZjk5eHdnZDBqd3cycm1xemV0OXowdmcifQ.NFpOdxrkTtbYxpMYnV3ByQ</string>

    <string name="turn_on_gps">Turn On GPS</string>
    <string name="sleep_tracker_fragment">SleepTrackerFragment</string>
    <string name="sleep_quality_fragment">SleepQualityFragment</string>

    <!-- Button labels -->
    <string name="start">Start Tracking</string>
    <string name="stop">Stop Tracking</string>
    <string name="clear">Clear All</string>
    <string name="cancel">Cancel</string>
    <string name="set_goal">Set goal</string>
    <string name="set">Set</string>

    <!-- Dialog -->
    <string name="dialog_clear_all_title">Do you really want to clear all your data?</string>
    <string name="dialog_sleep_goal_title">Set your sleep goal</string>
    <string name="hour">Hours (0–23)</string>
    <string name="minute">Minutes (0–59)</string>
    <string name="current_goal">Current Goal:</string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>YOUR SLEEP HISTORY</h3>]]></string>
    <string name="start_time"><![CDATA[<b>From:</b>]]></string>
    <string name="end_time"><![CDATA[<b>To:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Sleep duration: </b>]]></string>
    <string name="sleep_tracking"><![CDATA[<i>Tracking your sleep…</i>]]></string>

    <!-- Sleep quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <!-- Snackbar -->
    <string name="cleared_message">All your data is gone forever.</string>
    <string name="set_goal_snackbar_success">Your goal is set to</string>
    <string name="set_goal_snackbar_fail">Your input is invalid!</string>
    <string name="implementing">Sorry! This feature is being developed.</string>

    <!-- Day Label -->
    <string name="dateLabel">Date </string>
    <string name="monthLabel">Month </string>
    <string name="yearLabel"> Year </string>
    <string name="weekLabel">Week</string>

    <!-- Week summary -->
    <string name="totalDistance">Total Distance</string>
    <string name="totalTime">Total Time</string>
    <string name="totalWaterDrunk">Total Water Drunk</string>
    <string name="detail">Detail</string>

    <string name="running_title">Running</string>
    <string name="start_recording">Record Running</string>
    <string name="btnstats">Stats</string>
    <string name="start_sleeping">Record Sleeping</string>
    <string name="sleeping">Sleeping</string>
    <string name="water_intake">Counting habit</string>
    <string name="add_a_meal">Add a meal</string>
    <string name="food_intake">Food intake</string>
    <string name="name">Name</string>

    <string name="dialogCountType">
        You can choose to increase or decrease the number when you do something (such like increase 1 when you do push-up 1 time).
    </string>
    <string name="dialogTimeType">
        You can see the time you spend for that habit (like time for meditating).
    </string>
    <string name="dialogTickType">
        You can tick when you do something in a day (like reading a book, doing homework, etc).
    </string>
    <string name="WarningInAddHabit">You haven\'t named your habit.</string>
    <string name="timing_habit_name">Yoga</string>
    <string name="record_timing">Record Timing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Let\'s go</string>
    <string name="forgot_password">Forgot your password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="healthy_lifestyle">Healthy Lifestyle</string>



    <string name="server_domain">https://calm-tundra-29206.herokuapp.com/</string>


</resources>