<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/habit_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:layout_marginTop="7dp"
    card_view:cardCornerRadius="5dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timingHabitName"
        android:text="@string/timing_habit_name"
        android:textSize="20sp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sleep"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="-- /"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/tvCountCurrent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="5:00 minutes"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/tvCountGoal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_recording"
            android:id="@+id/startTiming"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimaryDark"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnstats"
            android:id="@+id/btnTimingStat"
            android:textColor="@color/colorPrimaryDark"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>